--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,14 @@
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+   <script type="text/javascript">
+     var disqus_shortname = 'dapi';
+     (function () {
+         var s = document.createElement('script'); s.async = true;
+         s.src = 'http://disqus.com/forums/dapi/count.js';
+         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+     }());
+   </script>
 
 </head>
 <body>
